[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.17.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "openai>=1.61.1",
    "python-dotenv>=1.0.1",
    "flask-wtf>=1.2.2",
    "requests>=2.32.3",
]
